@@ -7,12 +7,12 @@ package com.infiniteautomation.mango.io.serial;
 import java.io.IOException;
 import java.util.concurrent.TimeUnit;
 
-import jssc.SerialPort;
-
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import com.serotonin.m2m2.Common;
+
+import jssc.SerialPort;
 
 /**
  * @author Terry Packer
@@ -122,6 +122,10 @@ public class JsscSerialPortProxy extends SerialPortProxy {
             this.port.openPort();
             this.port.setFlowControlMode(createFlowControlMode(flowControlIn , flowControlOut));
             this.port.setParams(baudRate, createDataBits(dataBits), createStopBits(stopBits), createParity(parity));
+            
+            try{
+                this.port.purgePort(SerialPort.PURGE_RXCLEAR | SerialPort.PURGE_TXCLEAR);
+            }catch(jssc.SerialPortException e){ }
             
             long period = Common.envProps.getLong("serial.port.linux.readPeriods", 100);
             TimeUnit unit = TimeUnit.valueOf(Common.envProps.getString("serial.port.linux.readPeriodType", "NANOSECONDS"));
